--- a/404.html
+++ b/404.html
@@ -33,7 +33,11 @@
     </div>
     <nav id="js-menu-wrapper" class="header-menu-wrapper">
         <div class="container header-menu-container">
-            <button id="js-menu-btn" class="header-menu-btn" type="button"></button>
+            <button id="js-menu-btn" class="header-menu-btn" type="button">
+                <span class="header-menu-btn-item header-menu-btn-item-1"></span>
+                <span class="header-menu-btn-item header-menu-btn-item-2"></span>
+                <span class="header-menu-btn-item header-menu-btn-item-3"></span>
+            </button>
             <ul id="js-menu" class="header-menu">
                 <li class="header-menu-item">
                     <a href="index.html" class="header-menu-link">Главная</a>
@@ -42,38 +46,38 @@
                     <a href="text-page.html" class="header-menu-link">О компании</a>
                 </li>
                 <li class="header-menu-item header-menu-item-with-submenu">
-                    <a href="catalog.html" class="header-menu-link">Каталог</a>
+                    <a href="index.html#services" class="header-menu-link">Каталог</a>
                     <button class="header-submenu-btn js-submenu-btn" type="button"></button>
                     <ul class="header-submenu js-submenu">
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Воздушные перевозки</a>
+                            <a href="catalog.html" class="header-submenu-link">Воздушные перевозки</a>
                         </li>
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Морские перевозки</a>
+                            <a href="catalog.html" class="header-submenu-link">Морские перевозки</a>
                         </li>
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Сухопутные перевозки</a>
+                            <a href="catalog.html" class="header-submenu-link">Сухопутные перевозки</a>
                         </li>
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Управление отходами</a>
+                            <a href="catalog.html" class="header-submenu-link">Управление отходами</a>
                         </li>
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Транспортировка отходов</a>
+                            <a href="catalog.html" class="header-submenu-link">Транспортировка отходов</a>
                         </li>
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Услуги специализированной техники</a>
+                            <a href="catalog.html" class="header-submenu-link">Услуги специализированной техники</a>
                         </li>
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Аренда осветительных мачт</a>
+                            <a href="catalog.html" class="header-submenu-link">Аренда осветительных мачт</a>
                         </li>
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Аренда осветительных мачт</a>
+                            <a href="catalog.html" class="header-submenu-link">Аренда осветительных мачт</a>
                         </li>
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Аренда дизельных генераторов</a>
+                            <a href="catalog.html" class="header-submenu-link">Аренда дизельных генераторов</a>
                         </li>
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Аренда легкового автотранспорта с водителем и без</a>
+                            <a href="catalog.html" class="header-submenu-link">Аренда легкового автотранспорта с водителем и без</a>
                         </li>
                     </ul>
                 </li>
@@ -108,58 +112,58 @@
     </div>
 </div>
 </div>
-    <footer>
-        <div class="container footer-container">
-            <div class="footer-logo">
-                <img src="./img/logo-light.png" alt="" class="footer-logo-img">
-            </div>
-            <ul class="footer-menu">
-                <li class="footer-menu-item">
-                    <a class="footer-menu-link" href="index.html">Главная</a>
-                </li>
-                <li class="footer-menu-item">
-                    <a class="footer-menu-link" href="text-page.html">О компании</a>
-                </li>
-                <li class="footer-menu-item">
-                    <a class="footer-menu-link" href="reviews.html">Отзывы</a>
-                </li>
-                <li class="footer-menu-item">
-                    <a class="footer-menu-link" href="blog.html">Статьи</a>
-                </li>
-                <li class="footer-menu-item">
-                    <a class="footer-menu-link" href="contacts.html">Контакты</a>
-                </li>
-            </ul>
-            <ul class="footer-menu">
-                <li class="footer-menu-item">
-                    <a class="footer-menu-link" href="service-page.html">Воздушные, морские, сухопутные перевозки</a>
-                </li>
-                <li class="footer-menu-item">
-                    <a class="footer-menu-link" href="service-page.html">Управление отходами</a>
-                </li>
-                <li class="footer-menu-item">
-                    <a class="footer-menu-link" href="service-page.html">Транспортировка отходов</a>
-                </li>
-                <li class="footer-menu-item">
-                    <a class="footer-menu-link" href="service-page.html">Услуги специализированной техники</a>
-                </li>
-                <li class="footer-menu-item">
-                    <a class="footer-menu-link" href="service-page.html">Аренда осветительных мачт и дизельных генераторов</a>
-                </li>
-                <li class="footer-menu-item">
-                    <a class="footer-menu-link" href="service-page.html">Аренда легкового автотранспорта с водителем и без</a>
-                </li>
-            </ul>
-            <div class="footer-contacts">
-                <p class="footer-contacts-item">
-                    <a href="tel:+79161234567" class="footer-contacts-link">+7 916 123-45-67</a>
-                </p>
-                <p class="footer-contacts-item">
-                    <a href="mailto:info@mail.ru" class="footer-contacts-link">info@mail.ru</a>
-                </p>
-            </div>
+<footer>
+    <div class="container footer-container">
+        <div class="footer-logo">
+            <img src="./img/logo-light.png" alt="" class="footer-logo-img">
         </div>
-    </footer>
+        <ul class="footer-menu">
+            <li class="footer-menu-item">
+                <a class="footer-menu-link" href="index.html">Главная</a>
+            </li>
+            <li class="footer-menu-item">
+                <a class="footer-menu-link" href="text-page.html">О компании</a>
+            </li>
+            <li class="footer-menu-item">
+                <a class="footer-menu-link" href="reviews.html">Отзывы</a>
+            </li>
+            <li class="footer-menu-item">
+                <a class="footer-menu-link" href="blog.html">Статьи</a>
+            </li>
+            <li class="footer-menu-item">
+                <a class="footer-menu-link" href="contacts.html">Контакты</a>
+            </li>
+        </ul>
+        <ul class="footer-menu">
+            <li class="footer-menu-item">
+                <a class="footer-menu-link" href="catalog.html">Воздушные, морские, сухопутные перевозки</a>
+            </li>
+            <li class="footer-menu-item">
+                <a class="footer-menu-link" href="catalog.html">Управление отходами</a>
+            </li>
+            <li class="footer-menu-item">
+                <a class="footer-menu-link" href="catalog.html">Транспортировка отходов</a>
+            </li>
+            <li class="footer-menu-item">
+                <a class="footer-menu-link" href="catalog.html">Услуги специализированной техники</a>
+            </li>
+            <li class="footer-menu-item">
+                <a class="footer-menu-link" href="catalog.html">Аренда осветительных мачт и дизельных генераторов</a>
+            </li>
+            <li class="footer-menu-item">
+                <a class="footer-menu-link" href="catalog.html">Аренда легкового автотранспорта с водителем и без</a>
+            </li>
+        </ul>
+        <div class="footer-contacts">
+            <p class="footer-contacts-item">
+                <a href="tel:+79161234567" class="footer-contacts-link">+7 916 123-45-67</a>
+            </p>
+            <p class="footer-contacts-item">
+                <a href="mailto:info@mail.ru" class="footer-contacts-link">info@mail.ru</a>
+            </p>
+        </div>
+    </div>
+</footer>
     
     <div id="request-call-popup" class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
