--- a/text-page.html
+++ b/text-page.html
@@ -33,7 +33,11 @@
     </div>
     <nav id="js-menu-wrapper" class="header-menu-wrapper">
         <div class="container header-menu-container">
-            <button id="js-menu-btn" class="header-menu-btn" type="button"></button>
+            <button id="js-menu-btn" class="header-menu-btn" type="button">
+                <span class="header-menu-btn-item header-menu-btn-item-1"></span>
+                <span class="header-menu-btn-item header-menu-btn-item-2"></span>
+                <span class="header-menu-btn-item header-menu-btn-item-3"></span>
+            </button>
             <ul id="js-menu" class="header-menu">
                 <li class="header-menu-item">
                     <a href="index.html" class="header-menu-link">Главная</a>
@@ -42,38 +46,38 @@
                     <a href="text-page.html" class="header-menu-link">О компании</a>
                 </li>
                 <li class="header-menu-item header-menu-item-with-submenu">
-                    <a href="catalog.html" class="header-menu-link">Каталог</a>
+                    <a href="index.html#services" class="header-menu-link">Каталог</a>
                     <button class="header-submenu-btn js-submenu-btn" type="button"></button>
                     <ul class="header-submenu js-submenu">
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Воздушные перевозки</a>
+                            <a href="catalog.html" class="header-submenu-link">Воздушные перевозки</a>
                         </li>
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Морские перевозки</a>
+                            <a href="catalog.html" class="header-submenu-link">Морские перевозки</a>
                         </li>
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Сухопутные перевозки</a>
+                            <a href="catalog.html" class="header-submenu-link">Сухопутные перевозки</a>
                         </li>
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Управление отходами</a>
+                            <a href="catalog.html" class="header-submenu-link">Управление отходами</a>
                         </li>
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Транспортировка отходов</a>
+                            <a href="catalog.html" class="header-submenu-link">Транспортировка отходов</a>
                         </li>
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Услуги специализированной техники</a>
+                            <a href="catalog.html" class="header-submenu-link">Услуги специализированной техники</a>
                         </li>
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Аренда осветительных мачт</a>
+                            <a href="catalog.html" class="header-submenu-link">Аренда осветительных мачт</a>
                         </li>
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Аренда осветительных мачт</a>
+                            <a href="catalog.html" class="header-submenu-link">Аренда осветительных мачт</a>
                         </li>
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Аренда дизельных генераторов</a>
+                            <a href="catalog.html" class="header-submenu-link">Аренда дизельных генераторов</a>
                         </li>
                         <li class="header-submenu-item">
-                            <a href="service-page.html" class="header-submenu-link">Аренда легкового автотранспорта с водителем и без</a>
+                            <a href="catalog.html" class="header-submenu-link">Аренда легкового автотранспорта с водителем и без</a>
                         </li>
                     </ul>
                 </li>
@@ -126,55 +130,57 @@
             <li>t aliquip ex ea commodo consequat. Duis .</li>
             <li>enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure d</li>
         </ul>
-        <table>
-            <thead>
-            <tr>
-                <th>Текст</th>
-                <th>Тестовый текст</th>
-                <th>Тестовый большой текст</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure d</td>
-                <td>enim ad d</td>
-                <td>84685</td>
-            </tr>
-            <tr>
-                <td>
-                    <img src="./img/img-review.jpg" alt="">
-                </td>
-                <td>enim ad d</td>
-                <td>84685</td>
-            </tr>
-            <tr>
-                <td>
-                    <p>u fugiat
-                        nulla paria e velit esse cillum dolore eu fugiat nulla pariasicing elit, sed do eiusmod tempor incididunt ut labore et dolore magn</p>
-                    <p>u fugiat
-                        nulla paria e velit esse cillum dolore eu fugiat nulla pariasicing elit, sed do eiusmod tempor incididunt ut labore et dolore magn</p>
-                </td>
-                <td>
-                    <ol>
-                        <li>Lorem ipsum dole magna
-                            aliqua.</li>
-                        <li>t aliquip ex ea commodo consequat. Duis.</li>
-                        <li>enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure d</li>
-                        <li>t aliquip ex ea commodo consequat. Duis.</li>
-                    </ol>
-                </td>
-                <td>
-                    <ul>
-                        <li>Lorem i
-                            aliqua.
-                        </li>
-                        <li>t aliquip ex ea commodo consequat. Duis .</li>
-                        <li>enim ad d</li>
-                    </ul>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+        <div class="table-wrapper">
+            <table>
+                <thead>
+                <tr>
+                    <th>Текст</th>
+                    <th>Тестовый текст</th>
+                    <th>Тестовый большой текст</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure d</td>
+                    <td>enim ad d</td>
+                    <td>84685</td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="./img/img-text-page.jpg" alt="">
+                    </td>
+                    <td>enim ad d</td>
+                    <td>84685</td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>u fugiat
+                            nulla paria e velit esse cillum dolore eu fugiat nulla pariasicing elit, sed do eiusmod tempor incididunt ut labore et dolore magn</p>
+                        <p>u fugiat
+                            nulla paria e velit esse cillum dolore eu fugiat nulla pariasicing elit, sed do eiusmod tempor incididunt ut labore et dolore magn</p>
+                    </td>
+                    <td>
+                        <ol>
+                            <li>Lorem ipsum dole magna
+                                aliqua.</li>
+                            <li>t aliquip ex ea commodo consequat. Duis.</li>
+                            <li>enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure d</li>
+                            <li>t aliquip ex ea commodo consequat. Duis.</li>
+                        </ol>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>Lorem i
+                                aliqua.
+                            </li>
+                            <li>t aliquip ex ea commodo consequat. Duis .</li>
+                            <li>enim ad d</li>
+                        </ul>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
         <ol>
             <li>Lorem ipsum dolor sit amet, consectetur adipi e velit esse cillum dolore eu fugiat nulla paria e velit esse cillum dolore eu fugiat
                 nulla paria e velit esse cillum dolore eu fugiat nulla pariasicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -211,22 +217,22 @@
         </ul>
         <ul class="footer-menu">
             <li class="footer-menu-item">
-                <a class="footer-menu-link" href="service-page.html">Воздушные, морские, сухопутные перевозки</a>
+                <a class="footer-menu-link" href="catalog.html">Воздушные, морские, сухопутные перевозки</a>
             </li>
             <li class="footer-menu-item">
-                <a class="footer-menu-link" href="service-page.html">Управление отходами</a>
+                <a class="footer-menu-link" href="catalog.html">Управление отходами</a>
             </li>
             <li class="footer-menu-item">
-                <a class="footer-menu-link" href="service-page.html">Транспортировка отходов</a>
+                <a class="footer-menu-link" href="catalog.html">Транспортировка отходов</a>
             </li>
             <li class="footer-menu-item">
-                <a class="footer-menu-link" href="service-page.html">Услуги специализированной техники</a>
+                <a class="footer-menu-link" href="catalog.html">Услуги специализированной техники</a>
             </li>
             <li class="footer-menu-item">
-                <a class="footer-menu-link" href="service-page.html">Аренда осветительных мачт и дизельных генераторов</a>
+                <a class="footer-menu-link" href="catalog.html">Аренда осветительных мачт и дизельных генераторов</a>
             </li>
             <li class="footer-menu-item">
-                <a class="footer-menu-link" href="service-page.html">Аренда легкового автотранспорта с водителем и без</a>
+                <a class="footer-menu-link" href="catalog.html">Аренда легкового автотранспорта с водителем и без</a>
             </li>
         </ul>
         <div class="footer-contacts">
